# resume

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
i18n/ar/: base.json
i18n/en/: base.json
i18n/es/: base.json
i18n/fr/: base.json
src/: education.rs  experience.rs  header.rs  main.rs  skills.rs
